--- a/dm9_example/article.tex
+++ b/dm9_example/article.tex
@@ -18,35 +18,30 @@
 % {Примеров Петр Петрович, Трафаретов Тимофей Тимофеевич}%
 %    {Юмский университет}{primerov\_pp@yumsu.ru, trafaretov\_tt@yumsu.ru}
 %
-В настоящее время при построении математических моделей сетей массового обслуживания, и тандемов в частности, применяется описательный подход. При таком подходе задание входных потоков и алгоритмов обслуживания производится на содержательном уровне, законы распределения длительностей обслуживания требований считаются известными и задаются с помощью интегральной функции распределения времени обслуживания произвольного требования. При этом не удается решить проблему изучения выходящих потоков из узлов, а также рассмотреть сети с не мгновенным перемещением требований между узлами и с зависимыми, разнораспределенными длительностями обслуживания требований. 
-
-В настоящей работе применяется новый подход к построению вероятностных моделей тандемов конфликтных систем массового обслуживания с различными алгоритмами управления в узлах. В рамках этого подхода удается решить проблему выбора описаний $\omega$ элементарных исходов случайного эксперимента и математически корректно определить случайный процесс, описывающий эволюцию системы, а также решить перечисленные выше частные задачи.
-
 %
 % Подзаголовки можно задавать командой \Subtitle{Название подзаголовка}
 %
-\Subtitle{Постановка задачи на содержательном уровне}
-Рассмотрим систему массового обслуживания следующего вида. Пусть в систему с одним обслуживающим устройством поступают потоки $\Pi_1$, $\Pi_2$, $\Pi_3$  и $\Pi_4$. Требования по потоку $\Pi_j$ становятся в соответствующую очередь $O_j$ с неограниченной вместимостью, $j\in \{1, 2, 3, 4\}$. Для $j \in \{1, 2, 3\}$ дисциплина очереди $O_j$, имеет тип FIFO (First In First Out). Таким образом, для обслуживания из соответствующей очереди выбирается то требование, которое пришло раньше. Дисциплина очереди $O_4$ будет описана ниже. Входные потоки $\Pi_1$ и $\Pi_3$ формируются внешней средой, которая, будем предполагать, имеет только одно состояние, то есть вероятностная структура потоков не меняется с течением времени. Требования потоков $\Pi_1$ и $\Pi_3$ формируют независимые между собой неординарные пуассоновские потоки, то есть  стационарные, без последействия и ординарные потоки групп требований. Интенсивности соответствующих простейших потоков для $\Pi_1$ и $\Pi_3$ будем обозначать $\lambda_1$ и $\lambda_3$, а распределение числа заявок в группе по потоку $\Pi_j$ будем описывать производящей функцией $f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}$, $j\in \{1,3\}$, которая предполагается аналитической при любом $z$ из внутренности круга $|z|<(1+\varepsilon)$, $\varepsilon>0$. Величина $p_{\nu}^{(j)}$ определяет вероятность того, что по потоку $\Pi_j$ число требований в группе равно $\nu$. Обслуженные требования потока $\Pi_1$ поступают на повторное обслуживание, формируя при этом поток $\Pi_4$. Потоки $\Pi_2$ и $\Pi_3$ являются конфликтными, что означает запрет на одновременное обслуживание требований этих потоков и, следовательно, исследование системы не может быть сведено к задаче с меньшим числом потоков. В каждый момент времени обслуживающее устройство находится в одном из конечного множества состояний $\Gamma=\{\Gamma^{(k,r)} \colon k=0,1,\ldots,d; r=1,2,\ldots n_k\}$ с заданными натуральными числами $d$, $n_0$, $n_1$, $\ldots$, $n_d$. В каждом состоянии $\Gamma^{(k,r)}$ обслуживающее устройство находится в течение времени $T^{(k,r)}$. 
+Рассмотрим систему массового обслуживания следующего вида. Пусть в систему с одним обслуживающим устройством поступают потоки $\Pi_1$, $\Pi_2$, $\Pi_3$  и $\Pi_4$. Требования по потоку $\Pi_j$ становятся в соответствующую очередь $O_j$ с неограниченной вместимостью, $j=\overline{1,4}$. Для $j =\overline{1,3}$ дисциплина очереди $O_j$, имеет тип FIFO (First In First Out). Таким образом, для обслуживания из соответствующей очереди выбирается то требование, которое пришло раньше. Дисциплина очереди $O_4$ будет описана ниже. Входные потоки $\Pi_1$ и $\Pi_3$ формируются внешней средой, которая, будем предполагать, имеет только одно состояние, то есть вероятностная структура потоков не меняется с течением времени. Требования потоков $\Pi_1$ и $\Pi_3$ формируют независимые между собой неординарные пуассоновские потоки. Интенсивность простейшего потока $\Pi_j$ будем обозначать $\lambda_j$, а распределение числа заявок в группе по потоку $\Pi_j$ будем описывать производящей функцией $f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}$, $j\in \{1,3\}$, которая предполагается аналитической при любом $z$ из внутренности круга $|z|<(1+\varepsilon)$, $\varepsilon>0$. Величина $p_{\nu}^{(j)}$ определяет вероятность того, что по потоку $\Pi_j$ число требований в группе равно $\nu$. Обслуженные требования потока $\Pi_1$ поступают на повторное обслуживание, формируя при этом поток $\Pi_4$. Потоки $\Pi_2$ и $\Pi_3$ являются конфликтными, что означает запрет на одновременное обслуживание требований этих потоков и, следовательно, исследование системы не может быть сведено к задаче с меньшим числом потоков. В каждый момент времени обслуживающее устройство находится в одном из конечного множества состояний $\Gamma=\{\Gamma^{(k,r)} \colon k=\overline{0,d}; r=\overline{1,n_k}\}$ с заданными натуральными числами $d$, $n_0$, $n_1$, $\ldots$, $n_d$. В каждом состоянии $\Gamma^{(k,r)}$ обслуживающее устройство находится в течение времени $T^{(k,r)}$.
 
-Предполагается, что длительности обслуживания различных требований могут быть зависимыми и иметь различные законы распределения, поэтому вместо классического способа, состоящего в указании функции распределения длительности обслуживания произвольного требования, будут использованы потоки насыщения. Потоки насыщения $\Pi^{\mathrm{\text{нас}}}_j$, $j \in \{1,2,3,4\}$, определяются как виртуальные выходные потоки при 
-условии максимального использования ресурсов обслуживающего устройства, а для $j\in \{1, 2, 3\}$ еще и при условии максимальной загрузки соответствующих очередей. Поток насыщения $\Pi^{\mathrm{\text{нас}}}_j$, $j\in \{1,2,3\}$, будет содержать неслучайное число $\ell_{k,r,j}$ требований, обслуженных в течение времени $T^{(k,r)}$, если обслуживается очередь $O_j$, и будет содержать $0$ требований в противном случае.
+Предполагается, что длительности обслуживания различных требований могут быть зависимыми и иметь различные законы распределения, поэтому вместо классического способа, состоящего в указании функции распределения длительности обслуживания произвольного требования, будут использованы потоки насыщения. Потоки насыщения $\Pi^{\mathrm{\text{нас}}}_j$, $j=\overline{1,4}$, определяются как виртуальные выходные потоки при 
+условии максимального использования ресурсов обслуживающего устройства, а для $j=\overline{1,3}$ еще и при условии максимальной загрузки соответствующих очередей. Поток насыщения $\Pi^{\mathrm{\text{нас}}}_j$, $j=\overline{1,3}$, будет содержать неслучайное число $\ell_{k,r,j}$ требований, обслуженных в течение времени $T^{(k,r)}$, если обслуживается очередь $O_j$, и будет содержать $0$ требований в противном случае.
  
-Для задания информации о системе введем следующие величины и элементы, а также укажем множества их возможных значений. Пусть $\mathbb{Z}_+$ "--- множество целых неотрицательных чисел. В качестве дискретной временной шкалы выберем последовательность $\tau_0=0$, $\tau_1$, $\tau_2$, $\ldots$ моментов смены состояний обслуживающего устройства. Обозначим $\Gamma_i$ из множества $\Gamma$ состояние обслуживающего устройства в течение времени $\left(\tau_{i-1};\tau_i\right]$, количество $\varkappa_{j,i} \in \mathbb{Z}_+ $ требований в очереди $O_j$ в момент времени $\tau_i$, количество $\eta_{j,i} \in \mathbb{Z}_+$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\xi_{j,i} \in \mathbb{Z}_+$ требований по потоку насыщения $\Pi^{\mathrm{\text{нас}}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, количество $\overline{\xi}_{j,i}\in \mathbb{Z}_+$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$, $j\in \{1,2,3,4\}$.
+Для задания информации о системе введем следующие величины и элементы, а также укажем множества их возможных значений. Пусть $\mathbb{Z}_+$ "--- множество целых неотрицательных чисел. В качестве дискретной временной шкалы выберем последовательность $\tau_0=0$, $\tau_1$, $\tau_2$, $\ldots$ моментов смены состояний обслуживающего устройства. Обозначим $\Gamma_i$ из множества $\Gamma$ состояние обслуживающего устройства в течение времени $\left(\tau_{i-1},\tau_i\right]$, количество $\varkappa_{j,i} \in \mathbb{Z}_+ $ требований в очереди $O_j$ в момент времени $\tau_i$, количество $\eta_{j,i} \in \mathbb{Z}_+$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i},\tau_{i+1}\right]$, количество $\xi_{j,i} \in \mathbb{Z}_+$ требований по потоку насыщения $\Pi^{\mathrm{\text{нас}}}_j$ в течение времени $\left(\tau_{i},\tau_{i+1}\right]$, количество $\overline{\xi}_{j,i}\in \mathbb{Z}_+$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i},\tau_{i+1}\right]$, $j=\overline{1,4}$.
 
 
-Закон изменения состояния обслуживающего устройства будем предполагать заданным соотношением $\Gamma_{i+1}=h(\Gamma_i,\varkappa_{3,i})$, где вид отображения $h(\cdot,\cdot)$ описан в работе [...]. Для определения длительности $T_{i+1}$ состояния обслуживающего устройства в течение времени $(\tau_{i};\tau_{i+1}]$ удобно ввести функцию $h_T(\cdot,\cdot)$: $h_T(\Gamma_i,\varkappa_{3,i})=T^{(k,r)}$, где $\Gamma^{(k,r)}=h(\Gamma_i,\varkappa_{3,i})$.
+Закон изменения состояния обслуживающего устройства будем предполагать заданным соотношением $\Gamma_{i+1}=h(\Gamma_i,\varkappa_{3,i})$, где вид отображения $h(\cdot,\cdot)$ описан в работе [1]. Для определения длительности $T_{i+1}$ состояния обслуживающего устройства в течение времени $(\tau_{i},\tau_{i+1}]$ удобно ввести функцию $h_T(\cdot,\cdot)$: $h_T(\Gamma_i,\varkappa_{3,i})=T^{(k,r)}$, где $\Gamma^{(k,r)}=h(\Gamma_i,\varkappa_{3,i})$.
 Далее, функциональная зависимость
 $$
-\overline{\xi}_{j,i}=\min\{\varkappa_{j,i}+\eta_{j,i},\xi_{j,i}\}, \quad j\in \{1,2,3\}, \eqno{(1)}
+\overline{\xi}_{j,i}=\min\{\varkappa_{j,i}+\eta_{j,i},\xi_{j,i}\}, \quad j = \overline{1,3}, \eqno{(1)}
 $$
-между величиной $\overline{\xi}_{j,i}$ и величинами $\varkappa_{j,i}$, $\eta_{j,i}$, $\xi_{j,i}$ реализует стратегию механизма обслуживания требований. Далее, поскольку $\varkappa_{j,i+1}=\varkappa_{j,i}+\eta_{j,i}-\overline{\xi}_{j,i}$, то из (\verb|1|) следует соотношение $\varkappa_{j,i+1}=\max\{{0,\varkappa_{j,i}+\eta_{j,i}-\xi_{j,i}}\}$ для $j\in \{1,2,3\}$.
+между величиной $\overline{\xi}_{j,i}$ и величинами $\varkappa_{j,i}$, $\eta_{j,i}$, $\xi_{j,i}$ реализует стратегию механизма обслуживания требований. Далее, поскольку $\varkappa_{j,i+1}=\varkappa_{j,i}+\eta_{j,i}-\overline{\xi}_{j,i}$, то из (\verb|1|) следует соотношение $\varkappa_{j,i+1}=\max\{{0,\varkappa_{j,i}+\eta_{j,i}-\xi_{j,i}}\}$ для $j=\overline{1,3}$.
 Из формулировки поставленной задачи также следуют соотношения для потока $\Pi_4$: $\eta_{4,i} = \min\{\xi_{1,i}, \varkappa_{1,i}+\eta_{1,i}\}$, $\varkappa_{4,i+1}=\varkappa_{4,i}+\eta_{4,i}-\eta_{2,i}$ и $ \xi_{4,i} = \varkappa_{4,i}$.
 
 Для $j\in\{1,3\}$ и $t \in \mathbb{R}$ функцию $\varphi_j(\cdot,\cdot)$ введем из разложения $\sum_{\nu=0}^{\infty} z^\nu\varphi_j(\nu,t) = \exp\{\lambda_j t (f_j(z)-1)\}$.
-Функцию $\psi(\cdot,\cdot,\cdot)$ зададим формулой $\psi(k;y,u)=C_y^k u^k (1-u)^{y-k}$, $k,y \in Z_+$, $u \in [0;1]$. Пусть $a=(a_1, a_2, a_3, a_4) \in \mathbb{Z}_+^4$ и $x=(x_1, x_2, x_3, x_4) \in \mathbb{Z}_+^4$ и $\Gamma^{(\tilde{k},\tilde{r})}=h(\Gamma^{(k,r)},x_3)$. Тогда из постановки задачи на содержательном уровне следует, что при фиксированном значении пары $(\Gamma_i; \varkappa_i)$ вероятность $\varphi(a,k,r,x)$ одновременного выполнения равенств $\eta_{1,i}=a_1$, $\eta_{2,i}=a_2$, $\eta_{3,i}=a_3$, $\eta_{4,i}=a_4$ есть $\varphi_1(a_1,h_T(\Gamma^{(k,r)},x_3)) \times \psi(a_2,x_4, p_{\tilde{k},\tilde{r}}) \times \nobreak\discretionary{}	{\hbox{$\mathsurround=0pt$}}{}\varphi_3(a_3,h_T(\Gamma^{(k,r)},x_3))\times \delta_{a_4,\min{\{\ell(\tilde{k},\tilde{r},1), x_1+a_1}\}}$.
+Функцию $\psi(\cdot,\cdot,\cdot)$ зададим формулой $\psi(k;y,u)=C_y^k u^k (1-u)^{y-k}$, $k,y \in Z_+$, $u \in [0,1]$. Пусть $a=(a_1, a_2, a_3, a_4) \in \mathbb{Z}_+^4$ и $x=(x_1, x_2, x_3, x_4) \in \mathbb{Z}_+^4$ и $\Gamma^{(\tilde{k},\tilde{r})}=h(\Gamma^{(k,r)},x_3)$. Индикатор равенства двух величин $x$ и $y$ будем выражать символом кронекера $\delta_{x,y}$. Тогда из постановки задачи на содержательном уровне следует, что при фиксированном значении пары $(\Gamma_i; \varkappa_i)$ вероятность $\varphi(a,k,r,x)$ одновременного выполнения равенств $\eta_{1,i}=a_1$, $\eta_{2,i}=a_2$, $\eta_{3,i}=a_3$, $\eta_{4,i}=a_4$ есть $\varphi_1(a_1,h_T(\Gamma^{(k,r)},x_3)) \times \psi(a_2,x_4, p_{\tilde{k},\tilde{r}}) \times \nobreak\discretionary{}	{\hbox{$\mathsurround=0pt$}}{}\varphi_3(a_3,h_T(\Gamma^{(k,r)},x_3))\times \delta_{a_4,\min{\{\ell(\tilde{k},\tilde{r},1), x_1+a_1}\}}$.
 Пусть $b=(b_1, b_2, b_3, b_4) \in \mathbb{Z}_+^4$. Из содержательной постановки задачи также следует, что вероятность $\zeta(b, k, r, x)$ одновременного выполнения равенств $\xi_{1,i}=b_1$, $\xi_{2,i}=b_2$, $\xi_{3,i}=b_3$, $\xi_{4,i}=b_4$ при фиксированном значении $(\Gamma_i; \varkappa_i)$ есть $\delta_{b_1,\ell(\tilde{k},\tilde{r},1)} \times \delta_{b_2,\ell(\tilde{k},\tilde{r},2)} \times \delta_{b_3,\ell(\tilde{k},\tilde{r},3)} \times \delta_{b_4,x_4}$.
 
-В статье [...] конструктивно задается вероятностное пространство, на котором могут быть реализованы сформулированные выше функциональные связи и вероятностные свойства введенных объектов.
+В статье [1] конструктивно задается вероятностное пространство, на котором могут быть реализованы сформулированные выше функциональные связи и вероятностные свойства введенных объектов.
 Ниже в этой работе сформулированы три теоремы, формализующих модель колебаний длины низкоприоритетной очереди $O_3$ в терминах марковских цепей.
 
 \noindent
@@ -55,7 +50,7 @@ $$
 
 \noindent
 \hbox{\bf Теорема 2.}
-{\it Пусть $x_3$,~$\tilde{x}_3~\in \mathbb{Z}_+$ и $\Gamma^{(k,r)}$, $\Gamma^{(\tilde{k},\tilde{r})}= h(\Gamma^{(k,r)},x_3)$. Тогда переходные вероятности ${\mathbf P}(\Gamma_{i+1}=\Gamma^{(\tilde{k},\tilde{r})},\varkappa_{3,i+1}=\tilde{x}_3|\Gamma_{i}=\Gamma^{(k,r)},\nobreak\discretionary{}	{\hbox{$\mathsurround=0pt$}}{}\varkappa_{3,i}=x_3)$ однородной счетной марковской цепи $\{(\Gamma_i, \varkappa_{3,i});$  $i \geqslant 0\}$ вычисляются по следующей формуле: $ (1-\delta_{\tilde{x}_3,0}) \varphi_3(\tilde{x}_3 + \ell(\tilde{k},\tilde{r},3)-x_3,h_T(\Gamma^{(k,r)},x_3))  +\delta_{\tilde{x}_3,0}\sum_{a=0}^{\ell(\tilde{k},\tilde{r},3)-x} \varphi_3(a,h_T(\Gamma^{(k,r)},x_3))$}
+{\it Пусть $x_3$,~$\tilde{x}_3~\in \mathbb{Z}_+$ и $\Gamma^{(k,r)}$, $\Gamma^{(\tilde{k},\tilde{r})}= h(\Gamma^{(k,r)},x_3)$. Тогда переходные вероятности ${\mathbf P}(\{\Gamma_{i+1}=\Gamma^{(\tilde{k},\tilde{r})},\varkappa_{3,i+1}=\tilde{x}_3\}|\{\Gamma_{i}=\Gamma^{(k,r)},\nobreak\discretionary{}	{\hbox{$\mathsurround=0pt$}}{}\varkappa_{3,i}=x_3\})$ однородной счетной марковской цепи $\{(\Gamma_i, \varkappa_{3,i});$  $i \geqslant 0\}$ вычисляются по следующей формуле: $ (1-\delta_{\tilde{x}_3,0}) \varphi_3(\tilde{x}_3 + \ell(\tilde{k},\tilde{r},3)-x_3,h_T(\Gamma^{(k,r)},x_3))  +\delta_{\tilde{x}_3,0}\sum_{a=0}^{\ell(\tilde{k},\tilde{r},3)-x} \varphi_3(a,h_T(\Gamma^{(k,r)},x_3))$}
 
 Обозначим для $1 \leqslant r \leqslant n_0$ множество $S^3_{0,r} = \{(\Gamma^{(0,r)},x_3)  \colon x_3\in Z_+, \nobreak\discretionary{}	{\hbox{$\mathsurround=0pt $}}{} L \geqslant x_3 > L - \max\limits_{k=1, 2, \ldots, d}\{\sum_{t=0}^{n_k} \ell_{k,t,3}\}\}
 $ и  для $1 \leqslant k \leqslant d$, $1 \leqslant r \leqslant n_k$ множество $S^3_{k,r} =  \{(\Gamma^{(k,r)},x_3) \colon x_3\in Z_+, x_3 > L - \sum_{t=0}^{r-1} \ell_{k,t,3}\} \}$,
@@ -72,5 +67,7 @@ $ и  для $1 \leqslant k \leqslant d$, $1 \leqslant r \leqslant n_k$ множество $S
 \exhyphenpenalty=10000
 %
 \item
+Кочеганов~В.\,М., Зорин~А.\,В. Вероятностная модель тандема систем массового обслуживания с циклическим управлением с продлением~// Теория вероятностей, математическая статистика и их приложения: сб. науч. ст. (материалы Междунар. конф. Минск, --- 23-26 февр. 2015 г.	
+--- Т.\,2, №\,5. --- С.\,80--91.
 \end{enumerate}
 % vim:ts=4 sw=4 tw=79 cc=80
